<resources>
    <string name="app_name">TravelPlanner</string>
    <string name="hi_there">Hi There!</string>
    <string name="plan_your_next_trip">Plan your next trip</string>
    <string name="search_your_destination">Search Your Destination</string>
    <string name="plan_a_trip">Plan a trip</string>
    <string name="access_gallery">Access Gallery</string>
    <string name="view_media">View Media</string>
    <string name="edit_media_details">Edit Media Details</string>
    <string name="delete_media">Add Media</string>
    <string name="add_activity">Add Activity</string>
    <string name="edit_itinerary">Edit Itinerary</string>
    <string name="delete_day">Delete Day</string>
    <string name="edit_media_title">Edit Media Title</string>
    <string name="edit_media_description">Edit Media Description</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_media">Add Media</string>
    <string name="media_title">Media Title</string>
    <string name="media_description">Media Description</string>
    <string name="upload_file">Upload File</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="departure">Departure</string>
    <string name="return_">Return</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="book_this_trip">Book This Trip</string>
    <string name="add_activities_to">Add activities to</string>
    <string name="make_your_trip_even_more_adventerous_and_fun">make your trip even more adventerous and fun.</string>
    <string name="add_activity_">Add Activity</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
</resources>