<!-- fragment_add_media.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/addMediaImageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selectMediaButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/search_drawable"
        android:padding="10dp"
        android:text="@string/upload_file"
        android:drawableEnd="@drawable/baseline_file_upload_24"
        app:layout_constraintTop_toBottomOf="@+id/addMediaImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/addMediaTitleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/media_title"
        android:inputType="text"
        android:background="@drawable/search_drawable"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/selectMediaButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/addMediaDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/media_description"
        android:inputType="textMultiLine"
        android:background="@drawable/search_drawable"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/addMediaTitleEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addMediaButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_media"
        android:background="@drawable/button_bg"
        android:padding="10dp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/addMediaDescriptionEditText"
      app:layout_constraintEnd_toStartOf="@id/cancelBT"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@drawable/button_bg"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/addMediaButton"
        app:layout_constraintBottom_toBottomOf="@id/addMediaButton"
        app:layout_constraintEnd_toEndOf="@id/addMediaDescriptionEditText"
        app:layout_constraintTop_toTopOf="@id/addMediaButton"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>