<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photoRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:padding="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/viewMediaBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/viewMediaBtn"
            style="@style/ButtonStyle"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/view_media"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/editMediaDetailsBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photoRecyclerView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editMediaDetailsBtn"
            style="@style/ButtonStyle"
            android:layout_marginStart="16dp"
            android:text="@string/edit_media_details"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/viewMediaBtn"
            app:layout_constraintEnd_toStartOf="@id/deleteMediaBtn"
            app:layout_constraintStart_toEndOf="@id/viewMediaBtn"
            app:layout_constraintTop_toTopOf="@id/viewMediaBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteMediaBtn"
            style="@style/ButtonStyle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="15dp"
            android:text="@string/delete_media"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photoRecyclerView"  />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>